--- a/modelo_copin/metodos.tex
+++ b/modelo_copin/metodos.tex
@@ -27,6 +27,7 @@ Os dados utilizados
 	\item Durante a participação de um usuário nas atividades principais, só é possível identificar o gênero do seu colega por dois meios: foto ou nome;
 	\item resolvemos usar seu nome para identificar o gênero dos usuários.
 	\item Previous research shows that for people with western names, assessing sex based on the first name of an individual is accurate in social networks -- both those which require real names~\cite{tang2011s} and those which don't~\cite{burger2011discriminating}\cite{liu2013s}. 
+	\item Nosso método de inferência é similar ao utilizado em \cite{cunha2014he}.
 	\item We used a classifier which categorizes users into 3 classes based on the probabilistic frequency count under labels Male, Female, Unknown; each label indicates if the majority of people cataloged with a certain name is Male or Female. A name is considered Unknown if there’s no statistical difference between the proportion of Male and Female people cataloged with a certain name.
 	\item descrever como funciona o método de identificação de gênero
 	\item falar sobre o Global Name Data
