--- a/modelo_copin/ref.bib
+++ b/modelo_copin/ref.bib
@@ -41,7 +41,7 @@
 }
 
 @article{rustad2011suck,
-  title={" Suck It Up, Princess": Outreach and Diversity in FOSS Communities},
+  title={"Suck It Up, Princess": Outreach and Diversity in FOSS Communities},
   author={Rustad, Karen},
   year={2011}
 }
@@ -310,7 +310,7 @@
   title={Communities of practice: A brief introduction},
   author={Wenger, Etienne},
   year={2011},
-  booktitle={STEP Leadership Workshop, University of Oregon}
+  booktitle={STEP Leadership Workshop, University of Oregon},
   publisher={National Science Foundation (US)}
 }
 
@@ -362,17 +362,6 @@
   pages={299--324},
   year={1990},
   publisher={Wiley Online Library}
-}
-
-@article{campbell1986effects,
-  title={The effects of mathematics task performance on math self-efficacy and task interest},
-  author={Campbell, Nancy K and Hackett, Gail},
-  journal={Journal of Vocational Behavior},
-  volume={28},
-  number={2},
-  pages={149--162},
-  year={1986},
-  publisher={Elsevier}
 }
 
 @article{leslie2015expectations,
@@ -486,4 +475,86 @@
   journal={Social Science Quarterly},
   year={1992},
   publisher={Blackwell Publishing}
+}
+
+@inproceedings{yang2010activity,
+  title={Activity Lifespan: An Analysis of User Survival Patterns in Online Knowledge Sharing Communities.},
+  author={Yang, Jiang and Wei, Xiao and Ackerman, Mark S and Adamic, Lada A},
+  booktitle={ICWSM},
+  year={2010}
+}
+
+@article{cheng2014community,
+  title={How Community Feedback Shapes User Behavior},
+  author={Cheng, Justin and Danescu-Niculescu-Mizil, Cristian and Leskovec, Jure},
+  journal={arXiv preprint arXiv:1405.1429},
+  year={2014}
+}
+
+@article{cunha2014he,
+  title={He votes or she votes? Female and male discursive strategies in Twitter political hashtags},
+  author={Cunha, Evandro and Magno, Gabriel and Gon{\c{c}}alves, Marcos Andr{\'e} and Cambraia, C{\'e}sar and Almeida, Virgilio},
+  journal={PloS one},
+  volume={9},
+  number={1},
+  pages={e87041},
+  year={2014},
+  publisher={Public Library of Science}
+}
+
+@article{powell2010gender,
+  title={Gender differences within the open source community: An exploratory study},
+  author={Powell, WHITNEY E and Hunsinger, D SCOTT and Medlin, B DAWN},
+  journal={Journal of Information Technology},
+  volume={21},
+  number={4},
+  pages={29--37},
+  year={2010}
+}
+
+@article{barrett1999gender,
+  title={Gender differences in an on-line learning environment},
+  author={Barrett, Elizabeth and Lally, Vic},
+  journal={Journal of computer assisted learning},
+  volume={15},
+  number={1},
+  pages={48--60},
+  year={1999},
+  publisher={Wiley Online Library}
+}
+
+@techreport{niederle2005women,
+  title={Do women shy away from competition? Do men compete too much?},
+  author={Niederle, Muriel and Vesterlund, Lise},
+  year={2005},
+  institution={National Bureau of Economic Research}
+}
+
+@article{shapiro2011major,
+  title={Major selection and persistence for women in STEM},
+  author={Shapiro, Casey A and Sax, Linda J},
+  journal={New Directions for Institutional Research},
+  volume={2011},
+  number={152},
+  pages={5--18},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{croson2009gender,
+  title={Gender differences in preferences},
+  author={Croson, Rachel and Gneezy, Uri},
+  journal={Journal of Economic literature},
+  pages={448--474},
+  year={2009},
+  publisher={JSTOR}
+}
+
+@inproceedings{trauth2004understanding,
+  title={Understanding the under representation of women in IT: toward a theory of individual differences},
+  author={Trauth, Eileen M and Quesenberry, Jeria L and Morgan, Allison J},
+  booktitle={Proceedings of the 2004 SIGMIS conference on Computer personnel research: Careers, culture, and ethics in a networked environment},
+  pages={114--119},
+  year={2004},
+  organization={ACM}
 }
