--- a/modelo_copin/resultados.tex
+++ b/modelo_copin/resultados.tex
@@ -39,6 +39,8 @@ As comunidades que deram NaN foi por que não havia atividades de mulheres naque
 	\item Q3H2: Apenas duas comunidades homens têm frequencia de postagem maior do que mulheres: chess e movies. 12/14 e 2/14
 \end{itemize}
 
+Lembrar de citar ~\cite{Vasilescu27092013} aqui sobre o tempo de vida no SO.
+
 % section dedicacao (end)
 
 \section{Contribuições Ao Longo do Tempo}% (fold)
