--- a/modelo_copin/revisao.tex
+++ b/modelo_copin/revisao.tex
@@ -9,12 +9,46 @@
 	\item Mulheres são underrepresented em campos onde acredita-se que é necessário um talento inato para poder ter sucesso na área (caso de Computação e Filosofia; Neurosciência e Astronomia não)\cite{leslie2015expectations}. Já que existe o estereótipo de que mulheres não possuem tal talento\cite{tiedemann2000gender}\cite{kirkcaldy2007parental} 
 	\item "Women and minorities, who are generally less confident to begin with, tend to doubt whether they have that mythical magic brilliance, and that can discourage them from trying fields like math or philosophy"\cite{leslie2015expectations}
 	\item Importante notar que não foi provado ainda que esse "talento inato" é exclusivo de homens ou mulheres.\cite{hyde2005gender}
-	\item "If women internalize the stereotypes, they may also decide that these fields are not for them" \cite{wigfield2000expectancy}.
-	\item Apesar de não ser relacionada com sua real performance, a percepção que uma pessoa tem de sua capacidade cognitiva em um campo influencia como esta pessoa acha que se sairá em uma determinada tarefa. Mais ainda, achar que não vai se dar bem em uma tarefa pode fazer com que, caso seja dada a opção, a pessoa nem chegue a realizar esta tarefa. Mulheres acham que não são boas em tarefas sobre ciência e isso às influencia a não participar do campo.\cite{ehrlinger2003chronic} Isso pode explicar porque a proporção de mulheres é tão baixa nas comunidades sobre STEM, mas elas se dão tão bem quanto homens na maioria delas.\footnote{Talvez isto deva ficar na discussão} "This pattern of data suggests, by extension, that women might disproportionately avoid scientific pursuits because their self-views lead them to mischaracterize how well they are objectively doing on any given scientific task. Because they think they are doing more poorly than do men, they are more likely than men to avoid science when given an option."
+	\item "If women internalize the stereotypes, they may also decide that these fields are not for them" \cite{wigfield2000expectancy}\cite{shapiro2011major}.
 	\item Mulheres não possuem auto confiança tão alta quanto homens em ciências. \cite{fox1992confidence}
 	\item Achievements acadêmicos de mulheres (adolescentes) não têm a ver com a igualdade política, econômica ou social. Elas costumam outperform meninos em notas em disciplinas STEM related. Contudo, isso ainda deixa em aberto o porquê de tão poucas mulheres seguirem carreira na área. \cite{stoet2015sex}
 	\item Uma prova que tal estereótipo de que mulheres são menos competentes pode ser encontrado em \cite{moss2012science} onde acadêmicos de ambos os sexos não só preferem contratar homens à mulheres, como oferecem aos candidatos do sexo masculino um maior salário e melhor suporte de carreira (career mentoring).
-	\item 
+	\item Foi encontrado que, em canais de IRC sobre diversos assuntos, usuários que apresentam um "nick" feminino tendem a receber 25 vezes mais mensagens maliciosas que usuários com "nicks" masculinos e 4 vezes mais que usuários com "nicks" que não identificava o gênero. \cite{meyer2006assessing};
+	\item Feedback negativo pode ter um efeito negativo na comunidade, fazendo com os que o recebem continuem ativos e produzindo conteúdo de baixa qualidade\cite{cheng2014community}. O estudo mostra também que o efeito é viral: pessoas que recebem feedback negativo tendem a passá-lo para frente. Se mulheres são vistas como não tendo conhecimento suficiente para demonstrar conhecimento nestas comunidades e recebem feedback negativo nas suas contribuições, indiscriminadamente, isso pode levar a uma baixa na qualidade geral do conteúdo da comunidade toda. 
+	\item Em ambientes de aprendizado online homens interagem mais com o ambiente e postam mensagens mais longas e com um "contexto" mais social; já mulheres tendem a ter uma participação mais pontual e relacionada com o tema das aulas.\cite{barrett1999gender}
+	\item As comunidades do StackExchange podem ser vistas como um ambiente competitivo e estudos mostram que mulheres não são tão eficientes quanto homens em ambientes competitivos, principalmente quando é necessário competir com homens\cite{gneezy2003performance}. O baixo desempenho é frustrante e pode levar mulheres a sair cedo da comunidade. Um complemento sobre a diferença entre homens e mulheres em ambientes competitivos: enquanto a maioria das mulheres o evitam, homens sentem-se confortáveis em competições.\cite{niederle2005women}\cite{croson2009gender}
+	\item cursos na área de STEM são considerados competitivos. “a low proportion of women in a discipline probably sends a message to girls that the discipline is unattractive to women, and they should avoid it too” \cite{shapiro2011major}
+	\item Existem duas teorias principais sobre o motivo pelo qual mulheres não estão presentes em áreas relacionadas a IT: a essencialista que vê as causas na biologia e a "constructo social" que vê as causas no meio, o qual é considerado "male-friendly" mas não "female-friendly". Contudo, ainda é importante levar em consideração as diferenças individuais destas pessoas ao estudar esse gender gap.\cite{trauth2004understanding}
 \end{itemize}
 
+% Talvez os itens abaixo se encaixem melhor na discussão.
+\begin{itemize}
+	\item Em comunidades de perguntas e respostas (não testado no StackExchange), os usuários que têm um tempo de vida maior no site preferem responder à perguntar~\cite{yang2010activity}. Isso pode se alinha com o resultado de mulheres passarem menos tempo no site, já que elas preferem perguntar.
+	\item Apesar de não ser relacionada com sua real performance, a percepção que uma pessoa tem de sua capacidade cognitiva em um campo influencia como esta pessoa acha que se sairá em uma determinada tarefa. Mais ainda, achar que não vai se dar bem em uma tarefa pode fazer com que, caso seja dada a opção, a pessoa nem chegue a realizar esta tarefa. Mulheres acham que não são boas em tarefas sobre ciência e isso às influencia a não participar do campo.\cite{ehrlinger2003chronic} Isso pode explicar porque a proporção de mulheres é tão baixa nas comunidades sobre STEM, mas elas se dão tão bem quanto homens na maioria delas. "This pattern of data suggests, by extension, that women might disproportionately avoid scientific pursuits because their self-views lead them to mischaracterize how well they are objectively doing on any given scientific task. Because they think they are doing more poorly than do men, they are more likely than men to avoid science when given an option."
+	\item Mulheres que já estão envolvidas com a comunidade tendem a continuar fazendo parte dela. Isto pode ser encontrado também em comunidades FOSS\cite{powell2010gender}.Esse artigo também mostra que todas as mulheres entrevistadas acham que confidence é importante para se manter neste tipo de comunidade.
+\end{itemize}
 
+% Note to self: estou começando a achar que existe prejudice e harassment sim, mas as mulheres que conseguem se engajar com estas comunidades de tecnologia conseguem ignorar essas negatividades. Newcomers podem ver isto como barreira e nem se quer entrar na comunidade.
+
+% Old references
+\begin{itemize}
+	\item Neste estudo estamos estudando gênero como fator social (como as pessoas se identificam) e não biológico, portanto usaremos o termo "gênero" ao invés de "sexo". Mais ainda, estamos generalizando e estudando apenas os dois estremos do espectro: aqueles usuários que se identificam como homens e os que se identificam como mulheres.
+	\item Mulheres têm uma performance igual a de homens em atividades matemáticas, contudo homens vêm matemática como "a guy thing" mais do que mulheres~\cite{hyde1990gender}
+	\item It has been observed that results obtained in mathematical tasks can interfere in the performer's confidence and further results, and that failing affects more women than men. It's believed that this happen because of the common belief that Mathematics is a men's field~\cite{campbell1986effects}.
+	\item In women's perspective, gender has been found to be much less influential in deciding to follow a Computer Science career than cultural or environmental conditions~\cite{blum2007cultural}.
+	\item Studies point that women who are exposed to role models in science can change their attitude towards science in a positive way~\cite{smith1986effect}, and that can have a positive impact on their educational interest~\cite{nixon1999educational}
+	\item Women behavior in online communities is not always the same as men's. Some aspects which may differ between sexes are Internet usage~\cite{hargittai2006differences} and the type of language used, which can in turn influence the perception each gender has of the community's quality~\cite{Gefen:2005:YSS:1066149.1066156}. 
+	\item Massively multi-player online role playing games (MMORPGs) communities are recently witnessing the female number of users overcoming the males one, even though these games are not designed for women~\cite{taylor2003multiple}. 
+	\item In Wikipedia, research has found that although there is a lower number of female than male users~\cite{glott2010wikipedia}, men and women seem to contribute in similar ways, with women making lenghtier contributions. However, it was found that, for women who contribute to Wikipedia, positive feedback is an important factor to improve the number of contributions made by them, as this positive feedback seems to increase their confidence about their knowledge on the field of their contribution~\cite{collier2012conflict}. Lack of confidence on their knowledge may contribute to the lower overall contribution of women in this setting, what is seen as the majority of the content of Wikipedia is provided by a male minority~\cite{antin2011gender,lam2011wp}.
+	\item More technology-oriented communities like Free Open Source Software (FOSS) communities and StackOverflow not only have low women percentage, but also low women participation~\cite{rustad2011suck} and lower women engagement~\cite{Vasilescu27092013}. Men tend to have a longer lifetime (from the day of the first contribution until the day of the last) in these communities.
+\end{itemize}
+
+% % reler
+% \begin{itemize}
+% 	\item smith1986effect
+% 	\item nixon1999educational
+% 	\item Vasilescu27092013
+% \end{itemize}
+    
+    \bigskip
+Parágrafo resumindo o que foi visto, apontando o gap de conteúdo (mulheres em comunidades de perguntas e respostas e, principalmente, naquelas relacionadas à STEM) e afirmar que este estudo pretende preencher esse gap.
