--- a/modelo_copin/revisao.tex
+++ b/modelo_copin/revisao.tex
@@ -43,11 +43,9 @@
 	\item More technology-oriented communities like Free Open Source Software (FOSS) communities and StackOverflow not only have low women percentage, but also low women participation~\cite{rustad2011suck} and lower women engagement~\cite{Vasilescu27092013}. Men tend to have a longer lifetime (from the day of the first contribution until the day of the last) in these communities.
 \end{itemize}
 
-% % reler
+% % detalhes
 % \begin{itemize}
-% 	\item smith1986effect
-% 	\item nixon1999educational
-% 	\item Vasilescu27092013
+% 	\item Vasilescu27092013 - On StackOverflow it is clear that men engage for longer periods of time thanwomen. Relative to the duration of their engagement in StackOverflow, however, women formulate more questions than men, while providing a similar number of answers. This results in a relatively ‘unhealthy’ community where women disengage sooner, although their activity levels are comparable with men’s.
 % \end{itemize}
     
     \bigskip
