--- a/modelo_copin/metodos.tex
+++ b/modelo_copin/metodos.tex
@@ -100,6 +100,7 @@ The frequency of participation is the second metric used in this question, and i
 
 \begin{itemize}
 	\item Comunidades com menos de 14 meses foram retiradas porque a regressão estava dando errado (NaN). Acredito que por que foram separados em semestres e 2 semestres (ou 2 pontos) era muito pouco para a regressão
+	\item Proporção de contribuições ao longo do tempo, não cumulativo e proporção de registros ao longo do tempo, não cumulativos.
 \end{itemize}
 
 For this research question we want to verify if the lack of female contribution is something new on these communities. Or even if there are any patterns of rise or fall of contributions over time. In other words, we want to answer the following question: \textit{Do the proportion of contributions by each gender change over time?} Also, we investigated if there are any trends on registrations by each gender, answering the following question: \textit{Do the proportion of registrations by each gender change over time?}
