--- a/modelo_copin/introducao.tex
+++ b/modelo_copin/introducao.tex
@@ -1,39 +1,59 @@
 %!TEX root = main_mestrado.tex
 \chapter{Introdução}
+\label{sec:introduction}
 
-\begin{itemize}
-	\item Comunidades de perguntas e respostas e sua importância nos dias de hoje;
-	\item A importância da diversidade em uma comunidade;
-	\item Desigualdade de gênero em tecnologia;
-	\item Mulheres deixando o ramo antes e em maior quantidade do que homens;
-	\item Razões para mulheres estarem deixando a carreira: estereótipos, unfriendlyness, falta de espaço;
-	\item Consequências: mulheres não se identificam tanto, deixam de participar de comunidades de tecnologia, conteúdo enviesado;
-	\item The starting motivation for this study is a preoccupation with gender diversity. More specifically, with how women participate in contributing to Social Q\&A sites. Recent results point that only a minority of contributors in StackOverflow~\cite{Vasilescu27092013}, the largest site in the StackExchange platform, are women. Moreover, recent releases of diversity information of employees in large companies like Google~\cite{google:report} and Linkedin~\cite{linkedin:report} points out that the proportion of women in tech and leadership roles are low. This result is similar to those of some online communities related to technology like FOSS communities~\cite{rustad2011suck}. Moreover, it has been reported that in StackOverflow people who question the reason for such "gender gap" may not be understood and even mistreated\footnote{http://is.gd/eAnI8R}. These facts match the common stereotyping of women in STEM related fields~\cite{spencer1999stereotype} and women's lower influence in mixed-gender groups~\cite{karpowitz2012gender}. However, if women are currently led to contribute less than men by these communities, StackExchange sites are loosing not only potential contributors, but also the chance of producing content that addresses the views of women, and ultimately of better functioning by having more mixed gender crowds~\cite{marshall1975boys}.
-	\item Existem estudos de gênero em várias comunidades online, mas não nas comunidades do StackExchange como todo;
-	\item Objetivo: estudar o "efeito" de identificar seu gênero em comunidades do StackExchange com relação à participação, percepção de qualidade de conteúdo, tempo de atividade no site, quantidade de contribuições ao longo do tempo e proporção de usuários ativos ao longo do tempo.
-	\item Importância de estudar essas comunidades;
-	\item Responder: Por que os posts das mulheres seria diferente dos feitos por homens?
-	\item Mulheres tendem a se identificar menos, mas isso não é relevante, já que nós queremos ver o impacto que "ser mulher" nestas comunidades tem na participação destes usuários.
-	\item Estudamos os usuários que participaram da comunidade com pelo menos uma contribuição textual (comentário, pergunta ou resposta), que possuam reputação que os permita fazer todos os tipos de contribuições textuais (50 pontos) e que tenha seu gênero facilmente identificável pelos demais usuários.
-	\begin{itemize}
-		\item todas as contribuições de todos os usuários que se encaixam neste padrão, desde a criação da comunidade até setembro de 2014, foram levadas em consideração para este estudo.
-	\end{itemize}
-	\item Esperávamos que os resultados encontrados aqui batessem com o estereótipo de que mulheres não participam de comunidades online e principalmente àquelas sobre tecnologia.
-	\item Mulheres tendem a participar tanto quanto ou até mais do que homens na maioria das comunidades voltada para tecnologia. 
-	\item Resultados similares podem ser encontrados em outras comunidades como o Piazza\cite{piazza:report}
-	\item Este resultado é importante para acabar com estereótipos e mostrar que mulheres podem e tem seu espaço garantido em comunidades online e comunidades online sobre tecnologia.
-\end{itemize}
+Nos últimos anos, fontes de informação colaborativa online têm criado a sua importância no meio web, por seu conteúdo confiável e de fácil acesso. Podemos destacar, dentre tantas outras, a Wikipedia, Yahoo Answers e as plataformas do StackExchange. Essa última, apesar das suas mais de 100 comunidades, destaca-se no campo de STEM, com comunidades com mais de 4 milhões de usuários. 
 
-\emph{Bussiness problem}: 
+Sabendo que o conteúdo destas comunidades de perguntas e respostas é criado por voluntários, estes sites são extremamente dependentes da adoção e contribuição de seus usuários. Assim como a diversidade no conteúdo, a diversidade de visões de um certo assunto no conteúdo da comunidade também depende da diversidade dos usuários voluntários.
 
-\emph{Technical problem}: 
+A motivação inicial para este estudo foi um receio quanto à diversidade de gêneros ou "gender gap". Com o relatório de diversidade apresentado por grandes companhias como Google~\cite{google:report} e Linkedin~\cite{linkedin:report} mostrando que a proporção de mulheres em cargos de liderança é baixo, associamos logo às comunidades Open Source que apresentam números parecidos~\cite{rustad2011suck}. Chegando, enfim, a comunidades de perguntas e respostas, como o StackExchange onde resultados recentes mostram que mulheres são uma minoria extrema dentre os contribuidores do StackOverflow~\cite{Vasilescu27092013}, a maior comunidade dentro da plataforma StackExchange. Contudo, nota-se que pessoas que questionam a razão do "gender gap" no StackOverflow podem ser mal entendidas e até distratadas\footnote{http://is.gd/eAnI8R}.
 
-Objeto de estudo: Contribuições de um usuário durante toda a sua vida ativa nos sites de Q\&A do grupo StackExchange.
+Tais fatos coincidem com estereótipos comuns de mulheres em campos de STEM~\cite{spencer1999stereotype} assim como a baixa influência que mulheres possuem em grupos que possuem homens e mulheres ~\cite{karpowitz2012gender}. Contudo, se mulheres realmente são influenciadas a contribuir menos que homens nestas comunidades, as comunidades do StackExchange podem estar perdendo não só contribuidores de qualidade, mas também a oportunidade de produzir conteúdo que representa as visões de ambos os gêneros. E, por fim, ter um melhor funcionamento, sendo uma comunidade com grupos de gêneros distintos~\cite{marshall1975boys}.
 
-Finalidade: Definir se usuários de gêneros distintos possuem diferenças de comportamento nas comunidades estudadas.
+Esta pesquisa tem como objetivo estudar as consequências de um usuário identificar seu gênero em comunidades do StackExchange. Para atingir o nosso objetivo, estudamos usuários que participaram da comunidade e os quais podemos identificar seu gênero facilmente. Destes, os seguintes aspectos foram analisados: participação, qualidade das contribuições, tempo ativo na comunidade, contribuições ao longo do tempo. Mais ainda, estudamos como se comporta a proporção de registros por cada gênero, em cada comunidade, ao longo do tempo.
 
-Foco de Qualidade: (com respeito à)
+Apesar de que estudos anteriores apontam que a fração de contribuidoras é bem menor do que a de contribuidores, não é claro se mulheres tendem a, individualmente, contribuir menos, por menos tempo ou têm suas contribuições vistas como de menor qualidade pela comunidade. Estas observações podem nos orientar se estas comunidades são menos acolhedoras para contribuidoras e em que aspecto. Ao mesmo tempo, se não houverem diferenças em nenhum dos aspectos estudados, poderíamos inferir que contribuições vindas de ambos os gêneros são similares, sugerindo que, apesar do número baixo, mulheres são contribuidoras de valia e incentivá-las a entrar e continuar na comunidade apenas trará melhorias para o site.
 
-Perspectiva: A perspectiva será dos próprios usuários dos sites do StackExchange. Além dos administradores, tanto da plataforma inteira, quanto de cada tema, que poderão identificar os usuários que desejam manter e incentivar na comunidade.
+% TODO:
+Little sum up of the results. Similar results can be found on similar communities, like Piazza\cite{piazza:report}
 
-Contexto: Comunidades de perguntas e respostas do StackExchange criadas até Setembro de 2014.
+Estes resultados questionam o esteriótipo que mulheres são menos presentes em sites como os estudados porque suas contribuições podem não ser tão bem vindas quanto às dos homens. Em vez disso, os vários indicadores de contribuição que utilizamos mostram que mulheres que mostram seu gênero, no geral, contribuem de maneira similar aos homens com a mesma característica. Estes resultados mostram comunidades de perguntas e resposta, e em particular àquelas com assuntos relacionados a STEM, não são comunidades exclusivas para homens e necessitam de motivos alternativos para explicar o "gender gap" nestes sites. 
+
+% section introduction (end)
+
+% \begin{itemize}
+% 	\item Comunidades de perguntas e respostas e sua importância nos dias de hoje;
+% 	\item A importância da diversidade em uma comunidade;
+% 	\item Desigualdade de gênero em tecnologia;
+% 	\item Mulheres deixando o ramo antes e em maior quantidade do que homens;
+% 	\item Razões para mulheres estarem deixando a carreira: estereótipos, unfriendlyness, falta de espaço;
+% 	\item Consequências: mulheres não se identificam tanto, deixam de participar de comunidades de tecnologia, conteúdo enviesado;
+% 	\item The starting motivation for this study is a preoccupation with gender diversity. More specifically, with how women participate in contributing to Social Q\&A sites. Recent results point that only a minority of contributors in StackOverflow~\cite{Vasilescu27092013}, the largest site in the StackExchange platform, are women. Moreover, recent releases of diversity information of employees in large companies like Google~\cite{google:report} and Linkedin~\cite{linkedin:report} points out that the proportion of women in tech and leadership roles are low. This result is similar to those of some online communities related to technology like FOSS communities~\cite{rustad2011suck}. Moreover, it has been reported that in StackOverflow people who question the reason for such "gender gap" may not be understood and even mistreated\footnote{http://is.gd/eAnI8R}. These facts match the common stereotyping of women in STEM related fields~\cite{spencer1999stereotype} and women's lower influence in mixed-gender groups~\cite{karpowitz2012gender}. However, if women are currently led to contribute less than men by these communities, StackExchange sites are loosing not only potential contributors, but also the chance of producing content that addresses the views of women, and ultimately of better functioning by having more mixed gender crowds~\cite{marshall1975boys}.
+% 	\item Existem estudos de gênero em várias comunidades online, mas não nas comunidades do StackExchange como todo;
+% 	\item Objetivo: estudar o "efeito" de identificar seu gênero em comunidades do StackExchange com relação à participação, percepção de qualidade de conteúdo, tempo de atividade no site, quantidade de contribuições ao longo do tempo e proporção de usuários ativos ao longo do tempo.
+% 	\item Importância de estudar essas comunidades;
+% 	\item Responder: Por que os posts das mulheres seria diferente dos feitos por homens?
+% 	\item Mulheres tendem a se identificar menos, mas isso não é relevante, já que nós queremos ver o impacto que "ser mulher" nestas comunidades tem na participação destes usuários.
+% 	\item Estudamos os usuários que participaram da comunidade com pelo menos uma contribuição textual (comentário, pergunta ou resposta), que possuam reputação que os permita fazer todos os tipos de contribuições textuais (50 pontos) e que tenha seu gênero facilmente identificável pelos demais usuários.
+% 	\begin{itemize}
+% 		\item todas as contribuições de todos os usuários que se encaixam neste padrão, desde a criação da comunidade até setembro de 2014, foram levadas em consideração para este estudo.
+% 	\end{itemize}
+% 	\item Esperávamos que os resultados encontrados aqui batessem com o estereótipo de que mulheres não participam de comunidades online e principalmente àquelas sobre tecnologia.
+% 	\item Mulheres tendem a participar tanto quanto ou até mais do que homens na maioria das comunidades voltada para tecnologia. 
+% 	\item Resultados similares podem ser encontrados em outras comunidades como o Piazza\cite{piazza:report}
+% 	\item Este resultado é importante para acabar com estereótipos e mostrar que mulheres podem e tem seu espaço garantido em comunidades online e comunidades online sobre tecnologia.
+% \end{itemize}
+
+% \emph{Bussiness problem}: 
+
+% \emph{Technical problem}: 
+
+% Objeto de estudo: Contribuições de um usuário durante toda a sua vida ativa nos sites de Q\&A do grupo StackExchange.
+
+% Finalidade: Definir se usuários de gêneros distintos possuem diferenças de comportamento nas comunidades estudadas.
+
+% Foco de Qualidade: (com respeito à)
+
+% Perspectiva: A perspectiva será dos próprios usuários dos sites do StackExchange. Além dos administradores, tanto da plataforma inteira, quanto de cada tema, que poderão identificar os usuários que desejam manter e incentivar na comunidade.
+
+% Contexto: Comunidades de perguntas e respostas do StackExchange criadas até Setembro de 2014.
